fix(menu): prevent date from wrapping on desktop layout

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -259,7 +259,7 @@
 		}
 
 		.time-and-date {
-			grid-column: 1 / 2;
+			grid-column: 1 / span 2;
 		}
 	}
 }
